Update parameters to run on Java 11